@@ -18,6 +18,7 @@ exempt of errors.
 - Chris Pickel
 - Chuck Thomason (cyt4)
 - Craig Nelson
+- David Blanchet
 - David Maass
 - Emil Ljungdahl
 - Erik Johansson
